[package]
name = "supply_lines"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.30.0"
bevy_egui = "0.33.0"
bevy_rts_camera = "0.9.2"
big-brain = "0.22.0"
rand = "0.9.0"

# optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
